--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ClearSoch WORLD - Dashboard</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/dashboard.css">
+
+  <!-- CSS links (Exact folder & capitalization) -->
+  <link rel="stylesheet" href="Css/style.css">
+  <link rel="stylesheet" href="Css/dashboard.css">
 </head>
 <body>
+
   <!-- Sidebar -->
   <aside class="sidebar">
     <div class="logo">
@@ -30,7 +33,7 @@
       <p>Your all-in-one app-like platform for design, science, and thinking tools.</p>
     </header>
 
-    <!-- Quick Access Buttons / Cards -->
+    <!-- Quick Access Cards -->
     <section class="quick-access">
       <div class="card">
         <h3>Design Studio</h3>
@@ -55,6 +58,7 @@
     </section>
   </main>
 
-  <script src="js/main.js"></script>
+  <!-- JS Scripts (Exact folder & capitalization) -->
+  <script src="Js/main.js"></script>
 </body>
 </html>
